<resources>
    <string name="app_name">HandMeDown</string>
    <string name="categories">Categories</string>
    <string name="electronics">Electronics</string>
    <string name="gear">Gear</string>
    <string name="disposables">Disposables</string>
    <string name="consumables">Consumables</string>
    <string name="toys">Toys</string>
    <string name="clothing">Clothing</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="account_details">Account Details</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string-array name="categories">
        <item>Toys</item>
        <item>Clothing</item>
        <item>Electronics</item>
        <item>Gear</item>
        <item>Disposables</item>
        <item>Consumables</item>
    </string-array>
    <string-array name="pictures">
        <item>DEMO: Man 1</item>
        <item>DEMO: Man 2</item>
        <item>DEMO: Woman 1</item>
        <item>DEMO: Woman 2</item>
        <item>DEMO: Bear</item>
        <item>DEMO: Onesie</item>
        <item>DEMO: Monitor</item>
        <item>DEMO: Stroller</item>
        <item>DEMO: Diapers</item>
        <item>DEMO: Formula</item>
    </string-array>
</resources>