<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tx_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/categories"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:id="@+id/card_toys"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:layout_below="@id/tx_categories"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/category_card_blue">

        <ImageView
            android:id="@+id/image_category_bear"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/teddy_bear" />

        <TextView
            android:id="@+id/tx_toys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/toys"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_clothing"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:background="@drawable/category_card_yellow"
        android:layout_below="@id/tx_categories"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/image_category_onesie"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/onesie"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tx_clothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/clothing"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_electronics"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:background="@drawable/category_card_red"
        android:layout_below="@id/card_toys"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/image_monitor"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/baby_monitor"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tx_electronics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/electronics"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_gear"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:background="@drawable/category_card_green"
        android:layout_below="@id/card_clothing"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/tx_gear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/gear"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/image_stroller"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/stroller"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_disposables"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:background="@drawable/category_card_navy"
        android:layout_below="@id/card_electronics"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/tx_disposables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/disposables"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/image_diaper"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/diaper"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_consumables"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:background="@drawable/category_card_pink"
        android:layout_below="@id/card_gear"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/tx_consumables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/consumables"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/image_formula"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/formula"/>

    </RelativeLayout>









</RelativeLayout>