<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tx_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Profile"
        android:fontFamily="@font/poppins_medium"
        android:textSize="32sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/image_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/image_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@drawable/no_picture" />

    <ImageView
        android:id="@+id/image_name"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="140dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/user_2"/>

    <EditText
        android:id="@+id/tx_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        android:layout_toEndOf="@id/image_name"
        android:background="@null"
        android:fontFamily="@font/poppins_medium"
        android:inputType="none"
        android:text="Name"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/image_number"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/phone"
        android:layout_below="@id/image_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/tx_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/image_number"
        android:background="@null"
        android:fontFamily="@font/poppins_medium"
        android:inputType="none"
        android:text="Phone Number"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/image_address"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/image_number"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/address"/>

    <EditText
        android:id="@+id/tx_address"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_number"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/image_address"
        android:background="@null"
        android:fontFamily="@font/poppins_medium"
        android:inputType="none"
        android:text="Address"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tx_account_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_address"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/account_details"
        android:fontFamily="@font/poppins_medium"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/image_username"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/tx_account_details"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        app:srcCompat="@drawable/quote"/>

    <TextView
        android:id="@+id/tx_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_username"
        android:layout_below="@id/tx_account_details"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/gray"/>

    <EditText
        android:id="@+id/tx_username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_username"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/image_username"
        android:text="Username"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:background="@null"
        android:inputType="none"/>

    <ImageView
        android:id="@+id/image_email"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/image_username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        app:srcCompat="@drawable/at_email"/>

    <TextView
        android:id="@+id/tx_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_email"
        android:layout_below="@id/image_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/gray"/>

    <EditText
        android:id="@+id/tx_email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_email"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/image_email"
        android:text="Email"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:background="@null"
        android:inputType="none"/>

    <ImageView
        android:id="@+id/image_password"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/image_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        app:srcCompat="@drawable/key"/>

    <TextView
        android:id="@+id/tx_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="47dp"
        android:layout_toEndOf="@id/image_password"
        android:text="Password"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/baby_blue"
        android:textSize="20sp"
        android:clickable="true"/>

    <EditText
        android:id="@+id/tx_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_password"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/image_password"
        android:background="@null"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:inputType="none"
        android:text="Password"
        android:textSize="18sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/btn_user_save_changes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:clickable="false"
        android:visibility="invisible"
        android:background="@drawable/save_changes_bg">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:background="@drawable/check"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_logout"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/category_card_red">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Log Out"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>